# RSE_Assessment

./: README.md
RSE_ws/Robot_GUI/: CMakeLists.txt  CMakeLists.txt.user.9a24948  Robot_GUI  TCPClient.cpp  TCPClient.h  main.cpp
RSE_ws/src/SLAM/hdl_localization/launch/: hdl_localization.launch
RSE_ws/src/SLAM/hdl_localization/maps/: .64e66ceb2b1708bb47bf62a6ce0a1dc1c46dd112.cam
RSE_ws/src/SLAM/hdl_localization/rviz/: hdl_localization.rviz
RSE_ws/src/SLAM/map_saver/: CMakeLists.txt
RSE_ws/src/SLAM/map_saver/src/: map_saver.cpp  map_twod_saver.cpp
RSE_ws/src/Teleop/teleop_steer_bot/src/: teleop.cpp
RSE_ws/src/Teleop/twist_mux/config/: twist_mux_topics.yaml
RSE_ws/src/Teleop/twist_mux/launch/: twist_mux.launch
RSE_ws/src/gui_ros/: CMakeLists.txt  package.xml
RSE_ws/src/gui_ros/include/: TCPServer.h
RSE_ws/src/gui_ros/launch/: gui_ros.launch
RSE_ws/src/gui_ros/src/: TCPServer.cpp  gui_ros.cpp
RSE_ws/src/mybot_pkg/worlds/: city.world
RSE_ws/src/navigation_stack/pointcloud_to_laserscan_local/: CMakeLists.txt  package.xml
RSE_ws/src/navigation_stack/pointcloud_to_laserscan_local/launch/: pointcloud_to_laserscan.launch
RSE_ws/src/navigation_stack/pointcloud_to_laserscan_local/src/: pointcloud_to_laserscan.cpp
RSE_ws/src/navigation_stack/steer_bot_navigation/: package.xml
RSE_ws/src/navigation_stack/steer_bot_navigation/launch/: steer_bot_navigation.launch
RSE_ws/src/navigation_stack/steer_bot_navigation/maps/: map.pgm  map.yaml  map_street.pgm  map_street.yaml
RSE_ws/src/navigation_stack/steer_bot_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
RSE_ws/src/system_launch/: package.xml
RSE_ws/src/system_launch/launch/: system_launch.launch
RSE_ws/src/velodyne_simulator/velodyne_description/urdf/: HDL-32E.urdf.xacro
